# kabelsalat

./: Cargo.toml  README.md
docs/superpowers/specs/: 2026-07-22-mouse-scroll-and-select-hint-design.md  2026-07-22-tmux-persistence-design.md  2026-07-23-inherit-cwd-design.md
src/: app.rs  lib.rs  main.rs  state.rs  tmuxctl.rs
