[package]
name = "kabelsalat"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "kabelsalat"
path = "src/main.rs"

[dependencies]
libadwaita = { version = "0.9.2", features = ["v1_5"] }
relm4 = { version = "0.11.0", features = ["libadwaita"] }
vte4 = { version = "0.10.0", features = ["gtk_v4_18", "v0_82"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
